[tool.poetry]
name = "rainbow"
version = "0.1.0"
description = ""
authors = ["Patrick Schaffner <patrick.schaffner@zauberberg.io>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
